--- a/webapp/pages/about.html
+++ b/webapp/pages/about.html
@@ -281,6 +281,7 @@
                 <span>/400</span>
               </section>
               <textarea id="iptReason" cols="30" rows="10" data-placeholder="a-mask-ipt" maxlength="400"></textarea>
+              <p class="error-txt" id="reasonError" data-locale="a-mask-ipt"></p>
             </section>
             <button type="button" class="public-btn" id="maskSubmit" data-locale="a-mask-btn">提交申请</button>
           </section>
