--- a/webapp/pages/updateName.html
+++ b/webapp/pages/updateName.html
@@ -119,7 +119,7 @@
       <p class="error-txt" id="codeError" data-locale="r-code-error"></p>
 
       <section class="public-btn-list">
-        <button type="button" class="public-btn" data-locale="u-prev-btn">上一步</button>
+        <button type="button" class="public-btn goLogin" data-locale="u-prev-btn">上一步</button>
         <button type="button" class="public-btn" data-locale="u-next-btn" id="submitFrom">下一步</button>
       </section>
     </section>
@@ -137,7 +137,7 @@
       </section>
       <section class="public-flex-list">123456</section>
       <p data-locale="u-login">你可以使用账号密码登录网站了。</p>
-      <button type="button" class="public-btn" id="goLogin" data-locale="r-go-login">去登录</button>
+      <button type="button" class="public-btn goLogin" data-locale="r-go-login">去登录</button>
     </section>
 
     <!-- 公共底部 -->
