修改成员列表数据

--- a/webapp/pages/about.html
+++ b/webapp/pages/about.html
@@ -78,14 +78,14 @@
         <li>
           <a href="dapp.html" data-locale="nav-dapp">DApp</a>
         </li>
-        <li class="headerImg">
+        <!-- <li class="headerImg">
           <a href="center.html">
             <img src="../images/header.png" alt="" class="header-img">
           </a>
         </li>
         <li class="login">
           <a href="login.html" data-locale="nav-login">登陆</a>
-        </li>
+        </li> -->
         <li>
           <span id="i18nZh"> 中文 </span>
           <span class="head-line"> / </span>
@@ -236,23 +236,80 @@
       <section class="container" id="member">
         <article class="public-title">
           <h3 class="wow titanimate" data-wow-delay=".5s" data-locale="a-members">BIUT生态成员</h3>
-          <figure id="openMask" class="wow titanimate" data-wow-delay=".75s">
+          <!-- <figure id="openMask" class="wow titanimate" data-wow-delay=".75s">
             <figcaption data-locale="a-members-txt1">
               我也要榜上有名
             </figcaption>
             <img data-original="../images/index/more.png" alt="BIUT-more" title="more">
-          </figure>
+          </figure> -->
         </article>
 
         <section class="foot-members-cont">
           <ul class="row" id="memberList"></ul>
-          <section class="members-tab" id="membersTab">
+          <!-- <section class="members-tab" id="membersTab">
             <figure>
               <figcaption data-locale="a-members-txt2">换一换</figcaption>
               <img src="../images/about/memberRefresh.png" alt="">
             </figure>
-          </section>
+          </section> -->
         </section>
+
+        <article class="public-title">
+          <h3 class="wow titanimate" data-wow-delay=".5s" data-locale="a-team">BIUT顾问和投资团队</h3>
+          <!-- <figure id="openMask" class="wow titanimate" data-wow-delay=".75s">
+            <figcaption data-locale="a-members-txt1">
+              我也要榜上有名
+            </figcaption>
+            <img data-original="../images/index/more.png" alt="BIUT-more" title="more">
+          </figure> -->
+        </article>
+        <ul class="row team-list">
+          <li class="col-xs-12 col-md-12">
+            <section>
+              <h5 data-locale="a-team-list-tit1">李勐然</h5>
+              <p data-locale="a-team-list-txt1">SEC技术中国区技术落地负责人，卖座社交电商CEO，国内最早期实时linux研发者，互联网连续创业者</p>
+            </section>
+            <section>
+              <h5 data-locale="a-team-list-tit2">陈应魁</h5>
+              <p data-locale="a-team-list-txt2">卖座网创始人，腾讯早期员工，天使投资人</p>
+            </section>
+          </li>
+
+          <li class="col-xs-12 col-md-12">
+            <section>
+              <h5 data-locale="a-team-list-tit3">王星</h5>
+              <p data-locale="a-team-list-txt3">卖座网联合创始人，腾讯前100名员工，天使投资人</p>
+            </section>
+            <section>
+              <h5 data-locale="a-team-list-tit4">王勇</h5>
+              <p data-locale="a-team-list-txt4">
+                国家千人计划专家，加拿大达尔豪斯大学博士学位，CFA和FRM证书持有人，曾任加拿大皇家银行风险部董事总经理。著有金融风险管理专著及风险管理和衍生产品，区块链等译著；同时担任多伦多大学罗特曼管理学院学术顾问，约克大学客座教授
+              </p>
+            </section>
+          </li>
+
+          <li class="col-xs-12 col-md-12">
+            <section>
+              <h5 data-locale="a-team-list-tit5">谭磊</h5>
+              <p data-locale="a-team-list-txt5">区块链和大数据挖掘专家，北美区块链协会NASA发起人、微软总部工作13年，美国杜克大学硕士，《区块链 2.0》等著作</p>
+            </section>
+            <section>
+              <h5 data-locale="a-team-list-tit6">肖敏</h5>
+              <p data-locale="a-team-list-txt6">经纬创投合伙人。历任拼音加加总经理，百度TV产品经理,天极传媒IT事业部总经理，目前主攻互联网、电子商务、无线、软件等领域的投资</p>
+            </section>
+          </li>
+
+          <li class="col-xs-12 col-md-12">
+            <section>
+              <h5 data-locale="a-team-list-tit7">山峰</h5>
+              <p data-locale="a-team-list-txt7">SEC技术中国区电商负责人，区块链资深投资人，电商运营专家</p>
+            </section>
+            <section>
+              <h5 data-locale="a-team-list-tit8">赵亚甫</h5>
+              <p data-locale="a-team-list-txt8">广东卓泰投资管理有限公司风控总监</p>
+            </section>
+          </li>
+        </ul>
       </section>
       <section class="container-last"></section>
     </section>
@@ -294,7 +351,7 @@
       <section class="foot-history">
         <article class="public-title">
           <h3 class="wow titanimate" data-wow-delay=".5s" data-locale="a-time">项目进展和发展计划</h3>
-          <figure id="lookTime"  class="wow titanimate" data-wow-delay=".75s">
+          <figure id="lookTime" class="wow titanimate" data-wow-delay=".75s">
             <figcaption data-locale="more">
               了解更多
             </figcaption>
