--- a/webapp/pages/dapp.html
+++ b/webapp/pages/dapp.html
@@ -77,14 +77,14 @@
           <img src="../images/index/nav-check.png" alt="">
           <span data-locale="nav-dapp">DApp</span>
         </li>
-        <li class="headerImg">
+        <!-- <li class="headerImg">
           <a href="center.html">
             <img src="../images/header.png" alt="" class="header-img">
           </a>
         </li>
         <li class="login">
           <a href="login.html" data-locale="nav-login">登陆</a>
-        </li>
+        </li> -->
         <li>
           <span id="i18nZh"> 中文 </span>
           <span class="head-line"> / </span>
