--- a/webapp/pages/dynamic.html
+++ b/webapp/pages/dynamic.html
@@ -80,14 +80,14 @@
         <li>
           <a href="dapp.html" data-locale="nav-dapp">DApp</a>
         </li>
-        <li class="headerImg">
+        <!-- <li class="headerImg">
           <a href="center.html">
             <img src="../images/header.png" alt="" class="header-img">
           </a>
         </li>
         <li class="login">
           <a href="login.html" data-locale="nav-login">登陆</a>
-        </li>
+        </li> -->
         <li>
           <span id="i18nZh"> 中文 </span>
           <span class="head-line"> / </span>
